# abi-multiagent-rag

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_demo.sh
.github/workflows/: ci.yml
data/: Codigo_Conduta.txt  Guia_Onboarding.md  Politica_Sustentabilidade.md
docs/adr/: 001-langgraph-orquestrador.md  002-roteamento-cost-aware.md  003-compliance-dual-layer.md
evals/: evaluate.py
examples/: run_questions.py  test_questions.json
frontend/: .dockerignore  .gitignore  package-lock.json  package.json
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/components/: ChatInput.svelte  ChatMessage.svelte  EmptyState.svelte  Header.svelte  TechDetails.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
k8s/: app.yaml  config.yaml  infra.yaml  ingress.yaml
src/: config.py
src/agents/: __init__.py  compliance.py  rag_agent.py  router.py  validator.py
src/api/: __init__.py
src/core/: graph.py  llm_factory.py
src/schemas/: state.py
src/utils/: vector_store.py
tests/: e2e_live.py  test_api.py  test_compliance.py  test_compliance_live.py  test_graph.py  test_llm_factory.py  test_rag_agent.py  test_router.py  test_state.py  test_validator.py  test_vector_store.py
